saving category finished, just need to fix parent update in form reset etiquesttes not showing

--- a/Client/src/app/admin-panel/modifier-produits-et-services/categorie/ajout-categorie/ajout-categorie.component.css
+++ b/Client/src/app/admin-panel/modifier-produits-et-services/categorie/ajout-categorie/ajout-categorie.component.css
@@ -5,3 +5,11 @@ mat-form-field{
 .image{
     width: 40%;
 }
+
+.readonly-wrapper {
+    cursor: not-allowed;
+}
+
+.readonly-wrapper .readonly-block {
+    pointer-events: none;
+}
